[project]
name = "atoutcompta"
version = "0.1.0"
description = "Script pour faciliter l'extraction des dépenses simplifiées des salariés d'Atoutprises"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py>=1.0.0",
    "ghostscript>=0.7",
    "jupyterlab>=4.3.5",
    "opencv-python>=4.11.0.86",
    "pypdf2>=3.0.1",
    "tabulate>=0.9.0",
]
